Fixed vertical scrollbars visible on VirtualDataGrid in all columns

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -576,6 +576,28 @@ j|VirtualComboBoxPopUp {
   content: "\200b";
 }
 
+.first.jewel.list::-webkit-scrollbar
+{
+    display: none;
+}
+
+.first.jewel.list
+{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.middle.jewel.list::-webkit-scrollbar
+{
+    display: none;
+}
+
+.middle.jewel.list
+{
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
 j|DataGrid {
   IBeadView: ClassReference("org.apache.royale.jewel.beads.views.DataGridView");
   IBeadModel: ClassReference("org.apache.royale.html.beads.models.DataGridCollectionViewModel");
